# watermark-cli

./: Cargo.toml  Changes.md  README.md
.github/workflows/: action.yml
src/: cli.rs  main.rs  pdf.rs
