[package]
name = "watermark-cli"
description = "A command-line tool for adding watermarks to images with support for batch processing and various watermark patterns"
version = "1.1.6"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/chianti-ga/watermark-cli"
exclude = [
    "exemples/*"
]
authors = ["Chianti GALLY"]
keywords = ["watermark", "images", "pdf", "cli", "identity-theft"]
categories = ["command-line-utilities"]

[features]
default = ["auto-update"]
auto-update = []
static_ssl = ["openssl/vendored"]

[dependencies]
ab_glyph = "0.2.29"
clap = { version = "4.5.38", features = ["default", "unicode", "derive", "usage"] }
imageproc = { version = "0.25.0", features = ["default", "rayon"] }
rayon = "1.10.0"
log = "0.4.27"
indicatif = "0.18.0"
colored = "3.0.0"
reqwest = { version = "0.12.18", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
hayro = { version = "0.4.0", features = ["default", "embed-fonts", "jpeg2000"] }
openssl = { version = "0.10.*", optional = true } # Or the specific version you're using

[profile.dev]
opt-level = 1
